--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width,initial-scale=1.0,viewport-fit=cover"
+    />
     <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
 
     <!-- ionicons -->
@@ -34,4 +37,8 @@
 
 <style>
   @import 'https:////fonts.googleapis.com/css?family=Noto+Sans+TC:100,300,400,500,700,900';
+  body {
+    padding: env(safe-area-inset-top, 60px) env(safe-area-inset-right)
+      env(safe-area-inset-bottom) env(safe-area-inset-left);
+  }
 </style>
